--- a/OCP2016.md
+++ b/OCP2016.md
@@ -1,4 +1,6 @@
 # OCP2016@SanJose
+20160309@SanJoseConvensionCenter
+
 
 ## Day-1
 #### key-notes
@@ -23,7 +25,8 @@ Nothing special, they just said OCP is important.
 
 #### Google:
 
-join OCP today and contribute 48dcv standard and propose a narrower rack form factor 
+join OCP today and contribute 48dcv standard and propose a narrower rack form factor
+![48v](https://raw.githubusercontent.com/rkuo/NetworkOS/master/images/IMG_20160309_115659.jpg) 
 
 #### Microsoft
 
@@ -56,22 +59,21 @@ from SK telecom
 * separate states and logic
 
 Production ready stack
-<<insert pic>>
+![open source network](https://raw.githubusercontent.com/rkuo/NetworkOS/master/images/IMG_20160310_091319.jpg)
 
 orchestration agent translate appDB to SAIDB
 SynD get state info from SAI to SAIDB, SAI Redis move data in memory to SAIDB
 
 Platform
-<insert pic, platform application>
+![ecosystem](https://raw.githubusercontent.com/rkuo/NetworkOS/master/images/IMG_20160310_101218.jpg)
+
+Architecture
+![architecture](https://raw.githubusercontent.com/rkuo/NetworkOS/master/images/IMG_20160310_102017.jpg)
 
 #### Low Latency Analytics Platforms for Mobile Edge Computing
 from IDT
 *Network is the Data Center*
 Cloud Radio Access Network
-<insert pic>
-
-#### Analytics Platforms for HPC Clusters
-
 
 #### To-do
 
